<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrackFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/customcard"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/register"
            android:textColor="@color/header"
            android:textSize="34sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host"
                android:fontFamily="@font/inter"
                />
            <RadioButton
                android:id="@+id/radio_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/guest"
                android:fontFamily="@font/inter"
                />
        </RadioGroup>


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:autofillHints="Name"
            android:background="@drawable/custom_edittext_background"
            android:hint="@string/username"
            android:inputType="textPersonName">

        </EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/header"
            android:fontFamily="@font/inter"
            android:text="@string/submit_action"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="10dp">

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>