<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrackFragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.cardview.widget.CardView
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/inter"
                android:text="@string/bottom_menu_track"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter"
                android:text="@string/track_you"
                android:textColor="@color/grey_input_color"
                android:textIsSelectable="true"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/deviceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="track,device"
                android:textColorHint="@color/grey_input_color"
                android:background="@drawable/custom_edittext_background"
                android:drawableStart="@drawable/baseline_route_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/inter"
                android:hint="@string/add_device"
                android:inputType="textAutoComplete"
                android:minHeight="50dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addDeviceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/header"
                android:fontFamily="@font/inter"
                android:textColor="@color/white"
                android:text="@string/add_device"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>