<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CurrentDeviceItem">

    <!-- TODO: Update blank fragment layout -->


    <ProgressBar
        android:id="@+id/loader"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>

    <LinearLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/username"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="@string/device_name"
            android:textSize="16sp"
            android:textStyle="bold" />



        <ImageButton
            android:id="@+id/flashlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_background"
            android:padding="12dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/baseline_flashlight_off_24"
            android:contentDescription="@string/device_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/searchChildApp"
            android:background="@drawable/custom_edittext_background"
            android:textColor="@color/header"
            android:hint="@string/search_child_devices"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:autofillHints="Google Play,Game"
            android:inputType="text">

        </EditText>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/appsRecycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/custom_app_item"
            app:spanCount="4"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            />



    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/batteryImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/device_name"
            android:src="@drawable/battery_ui" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:textSize="10sp"
            android:textStyle="bold" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/gps_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_arrow_btn"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:src="@drawable/baseline_route_36"
        android:contentDescription="@string/device_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
